--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-#__next > div {
-  height: 100%;
+
+
+/* 设置滚动条的样式 */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* 滚动槽 */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  /*     border-radius: 8px; */
+}
+
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background: #bbb;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25);
+}
+
+/* 非激活窗口 */
+::-webkit-scrollbar-thumb:window-inactive {
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.0); */
+  border-radius: 4px;
+  background: #bbb;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+}
+
+
+/* 横向滚动条 */
+::-webkit-scrollbar:horizontal {
+  height: 4px;
 }
